# Boucle-framework

./: .dockerignore  .gitignore  BROCA_FOR_CLAUDE_DESKTOP.md  BROCA_PACKAGE_README.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  broca-landing.html  glama.json  install-broca.sh  secure-context-loader.py  security-middleware.py  uninstall-broca.sh
.buildkite/: pipeline.yml
docs/: CNAME  MULTI_AGENT_COLLABORATION.md  index.html  limitations-feed.xml  limitations.html  limitations.json  recipes.html  robots.txt  sitemap.xml  style.css
examples/: README.md  multi_agent_research_team.py  test-mcp.py
lib/: broca.sh  loop.sh  schedule.sh
plugins/: hn.py  linear.py
scripts/: add-kl-batch.py  add-kl.py  add-kls-1389-html.py  add-kls-1389.py  add-kls-480-495.py  add-kls.py  add-workarounds.py  add_kl_385.py  consolidate-categories.py  fetch-issues.py  fix-feed-categories.py  fix-html-categories.py  fix-kl-categories.py  generate-feed.py  kl-add-status.py  kl-find-fixed.py  kl-update-html-status.py  normalize-categories-full.py  normalize-html-cats.py  reconcile-limitations.py  sync-kl-json.py  sync-limitations-artifacts.py  sync-limitations-html.py  update-feed.py  update-kl-status.py
src/: config.rs  main.rs  mcp.rs
templates/: launchd.plist
test/: run_all.sh  test_broca.sh  test_broca_init_readme.sh  test_diagnose_readme_contract.sh  test_helper.sh  test_hook_docs_requirements.sh  test_installer_check_passthrough.sh  test_limitations_feed_sync.sh  test_limitations_html_sync.sh  test_limitations_metadata.sh  test_limitations_public_counts.sh  (+6 more)
(+125 files in other folders)
