[package]
name = "boucle"
version = "0.3.0"
edition = "2021"
authors = ["Bande-a-Bonnot"]
description = "A framework for autonomous AI agent loops — structured memory, lifecycle hooks, and scheduling"
license = "MIT"
repository = "https://github.com/Bande-a-Bonnot/Boucle-framework"
readme = "README.md"
keywords = ["ai", "agent", "autonomous", "memory", "loop"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "boucle"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
walkdir = "2"
glob = "0.3"
tokio = { version = "1", features = ["full"] }

# MCP server dependencies
mcpr = "0.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = true
opt-level = "z"
